--- a/Havoc Hill/Packages/manifest.json
+++ b/Havoc Hill/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.adaptiveperformance": "5.0.2",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.probuilder": "5.1.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
