--- a/Havoc Hill/Packages/manifest.json
+++ b/Havoc Hill/Packages/manifest.json
@@ -1,9 +1,18 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "9.0.3",
+    "com.unity.2d.pixel-perfect": "5.0.3",
+    "com.unity.2d.psdimporter": "8.0.2",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "9.0.2",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.adaptiveperformance": "5.0.2",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.24",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.probuilder": "5.1.1",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
